Added in mvnw stuffs, updated the dockerfile to use the alpine version to make it smaller. also changed the dockerfile to use the local jar. This avoids having to pull dependencies down everytime and speeds up the build. Use make gc-visualizr will now do a local mvn build and then run docker build pulling the local app.jar